--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "gatsby-starter-hello-world",
+  "name": "segredo-dev",
   "private": true,
-  "description": "A simplified bare-bones starter for Gatsby",
+  "description": "Descobertas que faço e coisas que aprendo",
   "version": "0.1.0",
   "license": "MIT",
   "scripts": {
@@ -14,9 +14,16 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "@sindresorhus/slugify": "^0.11.0",
+    "babel-plugin-styled-components": "^1.10.7",
     "gatsby": "^2.19.45",
+    "gatsby-plugin-styled-components": "^3.2.1",
+    "gatsby-source-filesystem": "^2.2.2",
+    "gatsby-transformer-remark": "^2.7.1",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "styled-components": "^5.0.1",
+    "typeface-inter": "^3.12.0"
   },
   "devDependencies": {
     "prettier": "^1.19.1"
