--- a/package.json
+++ b/package.json
@@ -35,9 +35,10 @@
     "react-disqus-comments": "^1.4.0",
     "react-dom": "^16.13.1",
     "react-helmet": "^5.2.1",
+    "react-icons": "^3.10.0",
     "react-share": "^4.1.0",
     "react-twitter-widgets": "^1.7.1",
-    "styled-components": "^5.1.0",    
+    "styled-components": "^5.1.0",
     "url-join": "^4.0.0"
   },
   "devDependencies": {
