--- a/package.json
+++ b/package.json
@@ -37,8 +37,11 @@
     "react-helmet": "^5.2.1",
     "react-icons": "^3.10.0",
     "react-share": "^4.1.0",
+    "react-spring": "^8.0.27",
     "react-twitter-widgets": "^1.7.1",
     "styled-components": "^5.1.0",
+    "typeface-merriweather": "0.0.72",
+    "typeface-montserrat": "0.0.75",
     "url-join": "^4.0.0"
   },
   "devDependencies": {
